# music_hrv

./: .gitignore  AGENTS.md  CLAUDE.md  MEMORY.md  README.md  music hrv.md  pyproject.toml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.streamlit/: config.toml
config/: canonical_events.yaml  pipeline.yml  sections.yml
data/demo/: assignments.csv
data/demo/hrv_logger/: 2025-03-15_Events_0001CTRL.csv  2025-03-15_Events_0001EXPR.csv  2025-03-15_RR_0001CTRL.csv  2025-03-15_RR_0001EXPR.csv  2025-03-16_Events_0002CTRL.csv  2025-03-16_Events_0002EXPR.csv  2025-03-16_RR_0002CTRL.csv  2025-03-16_RR_0002EXPR.csv  2025-03-17_Events_0003CTRL.csv  2025-03-17_Events_0003EXPR.csv  2025-03-17_RR_0003CTRL.csv  2025-03-17_RR_0003EXPR.csv  2025-03-18_Events_0004CTRL.csv  2025-03-18_Events_0004EXPR.csv  2025-03-18_RR_0004CTRL.csv  2025-03-18_RR_0004EXPR.csv  2025-03-19_Events_0005CTRL.csv  2025-03-19_Events_0005EXPR.csv  2025-03-19_RR_0005CTRL.csv  2025-03-19_RR_0005EXPR.csv  2025-03-20_Events_0006CTRL.csv  2025-03-20_Events_0006EXPR.csv  2025-03-20_RR_0006CTRL.csv  2025-03-20_RR_0006EXPR.csv
data/demo/processed/: 0001CTRL_events.yml
docs/: CONTRIBUTING.md  HRV_project_spec.md  manual_HRV_logger.md
scripts/: generate_demo_data.py
src/music_hrv/: cli.py
src/music_hrv/analysis/: __init__.py  (+1 more)
src/rrational/: __init__.py  cli.py
tests/: __init__.py  test_cli.py
tests/analysis/: test_music_sections.py
tests/cleaning/: test_rr.py
tests/io/: test_hrv_logger.py
tests/prep/: test_summaries.py
tests/segments/: test_section_normalizer.py
(+53 files in other folders)
